--- a/src/com/osf/test/config/db.properties
+++ b/src/com/osf/test/config/db.properties
@@ -2,3 +2,7 @@ url=jdbc:oracle:thin:@localhost:1521:xe
 user=osfu
 password=12345678
 classname=oracle.jdbc.OracleDriver
+clientId=SHKLJtsdwjxjU2B7WrXU
+clientSecret=kfWtHRC9Kv
+apiURL=https://openapi.naver.com/v1/papago/n2mt
+Method=POST
